--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
       ¡PAGAR AQUI! →
     </a>
   </div>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17205752739">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'AW-17205752739');
+</script>
 </body>
 </html>
