--- a/index.html
+++ b/index.html
@@ -67,5 +67,14 @@
 
   gtag('config', 'AW-17205752739');
 </script>
+  <!-- Event snippet for Vista de página conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17205752739/yJDnCP7prdwaEKPnq4xA',
+      'value': 1.0,
+      'currency': 'COP'
+  });
+</script>
+
 </body>
 </html>
