--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
 
 <!-- Botón con enlace (misma pestaña) -->
-<a href="https://caribesoolfct.com/Pagar?b=eyJlbmNyeXB0ZWQiOnRydWV9" class="absolute top-6 right-6 z-20">
+<a href="" class="absolute top-6 right-6 z-20">
   <div class="bg-yellow-300 text-black font-extrabold px-4 py-2 rounded-full shadow-lg text-sm uppercase animate-bounce">
     PAGA TU FACTURA AQUÍ
   </div>
@@ -53,7 +53,7 @@
     <p class="text-6xl font-extrabold mb-1">TU FACTURA AIR- E</p>
     <p class="text-sm mb-6"></p>
 
-    <a href="https://caribesoolfct.com/Pagar?b=eyJlbmNyeXB0ZWQiOnRydWV9" class="inline-block bg-green-300 text-black text-lg font-bold py-4 px-8 rounded-lg hover:bg-green-200 transition-transform duration-300 ease-in-out transform hover:scale-105 uppercase">
+    <a href="" class="inline-block bg-green-300 text-black text-lg font-bold py-4 px-8 rounded-lg hover:bg-green-200 transition-transform duration-300 ease-in-out transform hover:scale-105 uppercase">
       ¡PAGAR AQUI! →
     </a>
   </div>
