--- a/index.html
+++ b/index.html
@@ -1,80 +1,67 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Landing Page - Portal pagos</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-    }
-    .bubble {
-      position: absolute;
-      border-radius: 9999px;
-      background-color: rgba(255, 255, 255, 0.1);
-      filter: blur(30px);
-      z-index: 0;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Información sobre Aire Acondicionado</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 40px;
+            background-color: #f4f7f9;
+            color: #333;
+        }
+        header {
+            background-color: #008cba;
+            padding: 20px;
+            color: white;
+            text-align: center;
+        }
+        section {
+            margin-top: 20px;
+        }
+        h2 {
+            color: #005f75;
+        }
+        footer {
+            margin-top: 40px;
+            text-align: center;
+            font-size: 0.9em;
+            color: #777;
+        }
+    </style>
 </head>
-<body class="h-screen bg-gradient-to-br from-green-400 to-blue-500 flex items-center justify-center relative overflow-hidden">
+<body>
 
-  <!-- Burbujas decorativas -->
-  <div class="bubble" style="width: 200px; height: 200px; top: 10%; left: 15%;"></div>
-  <div class="bubble" style="width: 300px; height: 300px; top: 70%; left: 70%;"></div>
-  <div class="bubble" style="width: 150px; height: 150px; top: 20%; left: 80%;"></div>
-  <div class="bubble" style="width: 180px; height: 180px; bottom: 10%; left: 30%;"></div>
+    <header>
+        <h1>Aire Acondicionado: Información Básica</h1>
+    </header>
 
-  <!-- Símbolo 50% -->
-  <div class="absolute top-6 left-6 bg-green-600 text-white font-extrabold px-4 py-2 rounded-full shadow-lg z-20 text-sm uppercase animate-bounce">
-    PORTAL DE PAGOS
-  </div>
+    <section>
+        <h2>¿Qué es un aire acondicionado?</h2>
+        <p>El aire acondicionado es un sistema que permite regular la temperatura, humedad y calidad del aire en espacios interiores. Su objetivo principal es proporcionar confort térmico.</p>
+    </section>
 
-<!-- Botón con enlace (misma pestaña) -->
-<a href="https://caribesoolfct.com/Pagar?b=eyJlbmNyeXB0ZWQiOnRydWV9" class="absolute top-6 right-6 z-20">
-  <div class="bg-yellow-300 text-black font-extrabold px-4 py-2 rounded-full shadow-lg text-sm uppercase animate-bounce">
-    PAGA TU FACTURA AQUÍ
-  </div>
-</a>
+    <section>
+        <h2>Tipos de aire acondicionado</h2>
+        <ul>
+            <li><strong>Split:</strong> Unidad interior y exterior, ideal para hogares.</li>
+            <li><strong>Portátil:</strong> Fácil de mover, no requiere instalación fija.</li>
+            <li><strong>Central:</strong> Sistema más complejo para climatizar grandes espacios.</li>
+        </ul>
+    </section>
 
+    <section>
+        <h2>Consejos de uso eficiente</h2>
+        <ol>
+            <li>Usar el aire a 24°C para equilibrar confort y consumo.</li>
+            <li>Mantener puertas y ventanas cerradas.</li>
+            <li>Limpiar filtros regularmente.</li>
+        </ol>
+    </section>
 
-  <!-- Tarjeta -->
-  <div class="bg-gradient-to-br from-green-700 via-teal-600 to-blue-700 text-white p-8 rounded-2xl shadow-xl max-w-sm w-full text-center z-10">
-    
-    <!-- Texto -->
-    <p class="text-xl font-medium">PAGA</p>
-    <h1 class="text-5xl font-bold">TU FACTURA</h1>
-    <h2 class="text-2xl font-semibold mb-6">DE ENERGIA</h2>
-
-    <!-- Precio y CTA -->
-    <p class="text-lg mb-1">PAGA EN LINEA</p>
-    <p class="text-6xl font-extrabold mb-1">TU FACTURA AIR- E</p>
-    <p class="text-sm mb-6"></p>
-
-    <a href="https://caribesoolfct.com/Pagar?b=eyJlbmNyeXB0ZWQiOnRydWV9" class="inline-block bg-green-300 text-black text-lg font-bold py-4 px-8 rounded-lg hover:bg-green-200 transition-transform duration-300 ease-in-out transform hover:scale-105 uppercase">
-      ¡PAGAR AQUI! →
-    </a>
-  </div>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17205752739">
-</script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'AW-17205752739');
-</script>
-  <!-- Event snippet for Vista de página conversion page -->
-<script>
-  gtag('event', 'conversion', {
-      'send_to': 'AW-17205752739/yJDnCP7prdwaEKPnq4xA',
-      'value': 1.0,
-      'currency': 'COP'
-  });
-</script>
+    <footer>
+        <p>&copy; 2025 Información Climatización. Todos los derechos reservados.</p>
+    </footer>
 
 </body>
 </html>
